Fixed datatable row styles affecting the date picker dark mode style.

--- a/src/main/resources/gwt/material/design/client/resources/css/style.css
+++ b/src/main/resources/gwt/material/design/client/resources/css/style.css
@@ -62,7 +62,7 @@ thead {
     z-index: 500;
 }
 
-thead tr {
+table.table thead tr {
     height: 56px;
     background-color: #fff;
 }
